--- a/index.html
+++ b/index.html
@@ -14,117 +14,135 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Document</title>
   </head>
-  <header class="Header">
-    <div class="Header-block">
-      <p class="Header-block_language">ENG</p>
-      <div class="Header-block_nav">
-        <div class="Header-block_nav-text">
-          <p>Documentation / Who's using</p>
-        </div>
-      </div>
-      <img
-        class="Header-block_Logo"
-        src="assets/img/company-logo-black.jpg"
-        alt="logo"
-      />
-    </div>
-  </header>
   <body>
-    <main>
-      <section class="main-text">
-        <div class="Chapter1">
-          <h2 class="Chapter-title">
-            INTRODUCTION <sup class="Chapter-title_sup">Chapter 1</sup>
-          </h2>
-          <p class="Chapter-text">
-            Welcome to the very start of your React Native journey! If you're
-            looking for environment setup <br />
-            instructions, they've moved to <u>their own section.</u> Continue
-            reading for an introduction to the <br />
-            documentation, Native Components, React, and more!
-          </p>
+    <div class="Documentation">
+      <header class="Header">
+        <div class="Header-block">
+          <div class="Header-block_nav">
+            <h3 class="Header-block_language">ENG</h3>
+            <h3 class="Header-block_nav-text">Documentation / Who's using</h3>
+          </div>
+          <div class="Header-block_Logo">
+            <img src="assets/img/company-logo-black.jpg" alt="logo" />
+          </div>
         </div>
-        <div class="Chapter2">
-          <h2 class="Chapter-title">
-            core components <sup class="Chapter-title_sup">Chapter 2</sup>
-          </h2>
-          <p class="Chapter-text">
-            React Native is an open source framework for building Android and
-            iOS applications using React and <br />
-            the app platform’s native capabiles. With React Native, you use
-            JavaScript to access your platform’s <br />
-            APIs as well as to describe the appearance and behavior of your UI
-            using React components:
-            <i>bundles of reusable, nestable code.</i> You can learn more about
-            React in the next section. But first, let’s cover how components
-            work in React Native.
-          </p>
+      </header>
+      <main>
+        <div class="grid-conteiner">
+          <div class="side-bar">
+            <div class="side-bar_line">
+              <h2>INTRODUCTION</h2>
+            </div>
+            <div class="side-bar_line">
+              <h2>core components</h2>
+            </div>
+            <div class="side-bar_line">
+              <h2>react fundamentals</h2>
+            </div>
+            <div class="side-bar_line">
+              <h2>handling text input</h2>
+            </div>
+          </div>
+          <section class="main-text">
+            <div class="Chapter1">
+              <h2>
+                INTRODUCTION <sup class="Chapter-title_sup">Chapter 1</sup>
+              </h2>
+              <p class="Chapter-text">
+                Welcome to the very start of your React Native journey! If
+                you're looking for environment setup <br />
+                instructions, they've moved to
+                <u>their own section.</u> Continue reading for an introduction
+                to the <br />
+                documentation, Native Components, React, and more!
+              </p>
+            </div>
+            <div class="Chapter2">
+              <h2>
+                core components <sup class="Chapter-title_sup">Chapter 2</sup>
+              </h2>
+              <p class="Chapter-text">
+                React Native is an open source framework for building Android
+                and iOS applications using React and <br />
+                the app platform’s native capabiles. With React Native, you use
+                JavaScript to access your platform’s <br />
+                APIs as well as to describe the appearance and behavior of your
+                UI using React components:
+                <i>bundles of reusable, nestable code.</i> You can learn more
+                about React in the next section. But first, let’s cover how
+                components work in React Native.
+              </p>
+            </div>
+            <div class="Chapter3">
+              <h2>
+                react fundamentals
+                <sup class="Chapter-title_sup">Chapter 3</sup>
+              </h2>
+              <p class="Chapter-text">
+                React Native runs on <u>React</u>, a popular open source library
+                for building user interfaces with JavaScript. To make the most
+                of React Native, it helps to understand React itself. This
+                section can get you started or can serve as a refresher course.
+              </p>
+              <p class="Chapter-text">
+                We’re going to cover the core concepts behind React:
+              </p>
+              <p class="Chapter-text">
+                <b>+ components. </b> The rest of this introduction to React
+                uses cats in its examples: friendly, approachable creatures that
+                need names and a cafe to work in.
+              </p>
+              <p class="Chapter-text">
+                <b>+ JSX.</b> React and React Native use JSX, a syntax that lets
+                you write eleThe React docs have a comprehensive guide to JSX
+                you can refer to learn even more. Because JSX is JavaScript, you
+                can use variables inside it. Here you are declaring a name for
+                the cat, name, and embedding it with curly braces inside ments
+                inside JavaScript like so:
+                <span class="color">
+                  &lt;Text&gt; Hello, I am your cat!&lt;/Text&gt;.</span
+                >
+              </p>
+              <p class="Chapter-text">
+                The React docs have <u>a comprehensive guide to JSX</u> you can
+                refer to learn even more. Because JSX is JavaScript, you can use
+                variables inside it. Here you are declaring a name for the cat,
+                name, and embedding it with curly braces inside
+                <span class="color">&lt;Text&gt; </span>
+              </p>
+              <p class="Chapter-text">
+                <b> + props.</b> Props is short for “properties”.
+              </p>
+              <p class="Chapter-text">
+                <b>+ state.</b> While you can think of props as arguments you
+                use to configure how components render, state is like a
+                component’s personal data storage. State is useful for handling
+                data that changes over time or that comes from user interaction.
+                State gives your components memory!
+              </p>
+            </div>
+            <div class="Chapter4">
+              <h2>
+                handling text input
+                <sup class="Chapter-title_sup">Chapter 4</sup>
+              </h2>
+              <p class="Chapter-text">
+                TextInput is a Core Component that allows the user to enter
+                text. It has an <i>onChangeText</i> prop that takes a function
+                to be called every time the text changed, and an onSubmitEditing
+                prop that takes a function to be called when the text is
+                submitted.
+              </p>
+              <p class="Chapter-text">
+                For example, let's say that as the user types, you're
+                translating their words into a different language. In this new
+                language, every single word is written the same way: 🍕. So the
+                sentence "Hello there Bob" would be translated as "🍕 🍕".
+              </p>
+            </div>
+          </section>
         </div>
-        <div class="Chapter3">
-          <h2 class="Chapter-title">
-            react fundamentals <sup class="Chapter-title_sup">Chapter 3</sup>
-          </h2>
-          <p class="Chapter-text">
-            React Native runs on <u>React</u>, a popular open source library for
-            building user interfaces with JavaScript. To make the most of React
-            Native, it helps to understand React itself. This section can get
-            you started or can serve as a refresher course.
-          </p>
-          <p class="Chapter-text">
-            We’re going to cover the core concepts behind React:
-          </p>
-          <p class="Chapter-text">
-            <b>+ components. </b> The rest of this introduction to React uses
-            cats in its examples: friendly, approachable creatures that need
-            names and a cafe to work in.
-          </p>
-          <p class="Chapter-text">
-            <b>+ JSX.</b> React and React Native use JSX, a syntax that lets you
-            write eleThe React docs have a comprehensive guide to JSX you can
-            refer to learn even more. Because JSX is JavaScript, you can use
-            variables inside it. Here you are declaring a name for the cat,
-            name, and embedding it with curly braces inside ments inside
-            JavaScript like so:
-            <span class="color">
-              &lt;Text&gt; Hello, I am your cat!&lt;/Text&gt;.</span
-            >
-          </p>
-          <p class="Chapter-text">
-            The React docs have <u>a comprehensive guide to JSX</u> you can
-            refer to learn even more. Because JSX is JavaScript, you can use
-            variables inside it. Here you are declaring a name for the cat,
-            name, and embedding it with curly braces inside
-            <span class="color">&lt;Text&gt; </span>
-          </p>
-          <p class="Chapter-text">
-            <b> + props.</b> Props is short for “properties”.
-          </p>
-          <p class="Chapter-text">
-            <b>+ state.</b> While you can think of props as arguments you use to
-            configure how components render, state is like a component’s
-            personal data storage. State is useful for handling data that
-            changes over time or that comes from user interaction. State gives
-            your components memory!
-          </p>
-        </div>
-        <div class="Chapter4">
-          <h2 class="Chapter-title">
-            handling text input <sup class="Chapter-title_sup">Chapter 4</sup>
-          </h2>
-          <p class="Chapter-text">
-            TextInput is a Core Component that allows the user to enter text. It
-            has an <i>onChangeText</i> prop that takes a function to be called
-            every time the text changed, and an onSubmitEditing prop that takes
-            a function to be called when the text is submitted.
-          </p>
-          <p class="Chapter-text">
-            For example, let's say that as the user types, you're translating
-            their words into a different language. In this new language, every
-            single word is written the same way: 🍕. So the sentence "Hello
-            there Bob" would be translated as "🍕 🍕".
-          </p>
-        </div>
-      </section>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
